Fix heading hover area
It does not look good if the heading font size changes in reaction to
mouse hover on the entire row.

--- a/index.css.sass
+++ b/index.css.sass
@@ -81,6 +81,7 @@ body
 .heading
   $hover-size: 80px
 
+  display: inline-block
   font-size: 70px
   line-height: $hover-size
   margin-top: 20px
